cmake_minimum_required(VERSION 3.16)
project(main)
add_executable(main main.cpp)
# target_link_options(main PUBLIC "--entry=entry")
# target_link_options(main PUBLIC "-pie")
# target_link_options(main PUBLIC "-nostartfiles")
# target_link_options(main PUBLIC "-nodefaultlibs")
# target_link_options(main PUBLIC "-nostdlib")
# target_link_options(main PUBLIC "-nolibc")